# wiki-agent

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  config.example.toml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-docker-image.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/adr/: 0001-comment-driven-stateless-reconciliation.md  0002-scheduled-comment-agent-with-durable-jobs.md  0003-hosted-web-research-in-runner.md
docs/agents/: domain.md  implementation-workflow.md  (+1 more)
scripts/: manual_harness_run_once.sh  manual_harness_setup_and_comment.sh
tests/: test_app.py  test_check.py  test_cli.py  test_cli_smoke.py  test_comment_jobs.py  test_config.py  test_docker_packaging.py  test_docs_only_changes.py  test_environment.py  test_failure_feedback.py  test_integration_harness.py  test_logging.py  test_manual_harness_run_once_script.py  test_manual_harness_setup_and_comment.py  test_runner.py  test_runner_client.py  test_runner_completion.py  test_runner_prompt_template_resource.py  test_runner_render_prompt.py  test_scanner.py  test_tools_wikigo_helper.py  test_wikigo_adapter.py  test_wikigo_helper.py  test_worker.py  test_worktree.py
tools/: __init__.py  docs_only_changes.py  integration_harness.py  wikigo_helper.py  worktree.py
(+39 files in other folders)
