[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiki-agent"
version = "0.1.0"
description = "Scheduled Wiki-Go comment agent service skeleton."
requires-python = ">=3.14,<3.15"
dependencies = [
    "psycopg[binary]>=3.3.4",
]

[project.scripts]
wiki-agent = "wiki_agent.cli:main"
wiki-agent-runner = "wiki_agent.runner:main"
wiki-agent-integration = "tools.integration_harness:main"
wikigo-helper = "tools.wikigo_helper:main"
wikigo-page = "wiki_agent.wikigo_page_helper:main"

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
]

[tool.pytest.ini_options]
markers = [
  "integration: runs against the repo-owned integration harness",
]
addopts = "-m 'not integration'"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_agent", "tools"]
